--- a/src/components/Notes/SearchBox.css
+++ b/src/components/Notes/SearchBox.css
@@ -5,4 +5,20 @@ input[type=search] {
 	letter-spacing: 4px;        
     text-shadow: 0 0 1px black;  
     border-radius: 5px;
+	font-size: 13px;
+}
+
+@media screen and (max-width:800px){
+	input[type=search]{
+		width: 40%;
+		font-size: 10px;
+	}
+}
+
+
+@media screen and (max-width:600px){
+	input[type=search]{
+		width: 40%;
+		font-size: 8px;
+	}
 }
