Update the view <400

--- a/src/components/Notes/Note.css
+++ b/src/components/Notes/Note.css
@@ -48,3 +48,10 @@
     font-family: 'Texturina', serif;
 
 }
+
+@media screen and (max-width:400px){
+    .form{
+        width: 90%;
+    }
+   
+}
